--- a/.github/workflows/python_ci_cd.yml
+++ b/.github/workflows/python_ci_cd.yml
@@ -26,6 +26,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Set PYTHONPATH
+      run: echo "::add-path::$(pwd)"
+
     - name: Run tests
       run: |
         pytest --maxfail=5 --disable-warnings
